--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -24,7 +24,7 @@
     "- `scipy.sparse` handles sparse matrices (a.k.a., n-hot encoding matrices) easy to handle\n",
     "- we also make use of\n",
     "    + `numpy` for all kinds of numeric computing in Python\n",
-    "    + `pandas` for dealing with the **PANel DAtaS** (essentially spreadsheets) with Python Data Analysis Library"
+    "    + `pandas` for dealing with the **PANel DAta Sheets** (essentially spreadsheets) with Python Data Analysis Library"
    ]
   },
   {
@@ -243,6 +243,16 @@
    "source": [
     "all_cues = ['pot', 'red', 'blue']\n",
     "all_outcomes = ['TOMATO', 'NO.TOMATO']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have many cues and/or outcomes, Python can handle them and give you back the unique ones!\n",
+    "\n",
+    "[GitHub](https://github.com/striatum/Zagreb-2019.git)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/striatum/Zagreb-2019/master?filepath=Automatic_cue_outcome_handling.ipynb)\n"
    ]
   },
   {
