--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -24,7 +24,7 @@
     "- `scipy.sparse` handles sparse matrices (a.k.a., n-hot encoding matrices) easy to handle\n",
     "- we also make use of\n",
     "    + `numpy` for all kinds of numeric computing in Python\n",
-    "    + `pandas` for dealing with the **PANel DAta Sheets** (essentially spreadsheets) with Python Data Analysis Library"
+    "    + `pandas` for dealing with the **PANel DAta Sets** (essentially spreadsheets) with Python Data Analysis Library"
    ]
   },
   {
