--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to import necessary libraries and functions:\n",
+    "We need to import the necessary libraries and functions:\n",
     "- `chain` from `itertools` makes list *flattening* straightforward and easy (i.e., when you have lists in a list)\n",
     "- `Counter` from `collections` handles elements in a list by making something like a frequency dictionary\n",
     "- `scipy.sparse` handles sparse matrices (a.k.a., n-hot encoding matrices) easy to handle\n",
@@ -142,8 +142,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the begining of our work on and use of the **Naive Discrimination Learning** (NDL), we developed certain \"taste\". In that, we had to have some *special characters* - jokers:\n",
-    "- `#`, if we are dealing with the continuous text, we use hashtags to mark the begining and the end of an item (usually a word)\n",
+    "From the begining of our work on and use of **Naive Discrimination Learning** (NDL), we developed a certain \"taste\". In that, we had to have some *special characters* - jokers:\n",
+    "- `#`, if we are dealing with continuous text, we use hashtags to mark the begining and the end of an item (usually a word)\n",
     "- `_`, separates the items\n",
     "\n",
     "Thus, from the above table, we can see that in the 2nd learning trial we have all three input units present. We can make sure that Python \"understands\" that there are three elements (or two, or one, given a learning trial):"
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have many cues and/or outcomes, Python can handle them and give you back the unique ones!\n",
+    "If you have many cues and/or outcomes, Python can handle them and return the unique ones!\n",
     "\n",
     "[GitHub](https://github.com/striatum/Zagreb-2019.git)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/striatum/Zagreb-2019/master?filepath=Automatic_cue_outcome_handling.ipynb)\n"
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**[2]** Run through our original table, row-by-row, and \"flag\" if cue is present or not (1/0) and if outcome is present or not (1/0):"
+    "**[2]** Run through our original table, row-by-row, and \"flag up\" if a cue is present or not (`1` / `0`) and if an outcome is present or not (1/0):"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we are ready to start our training. The only missing bit is to make our own *function* that will handle the weight updating:\n",
+    "Now, we are ready to start our training. The only missing bit is to make our own *function* that will handle weights updating:\n",
     "\n",
     "\n",
     "$$ \\Delta w_{i} = \\gamma \\times (t - y_{in}) \\times x_{i} $$\n"
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need to prepare an empty matrix that will keep the booking of all weights - for each cue-outcome combination:"
+    "First, we need to prepare an empty matrix that will keep tallies of all weights - for each cue-outcome combination:"
    ]
   },
   {
