--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -460,6 +460,14 @@
    "outputs": [],
    "source": [
     "def update_weights(cues, outcomes, old_weights, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Updating weights for Widrow-Hoff / Delta / Least Mean Square (LMS) Rule\n",
+    "    ----------\n",
+    "    cues:       input learning cues\n",
+    "    outcomes:   outcomes (targets, criteria)\n",
+    "    old_weights:  old weight values (in previous time step of learning)\n",
+    "    learning_rate: rate of learning (speed of change)\n",
+    "    \"\"\"\n",
     "\tnew_weights = old_weights + (learning_rate * cues.T * (outcomes - (cues * old_weights)))\n",
     "\treturn(new_weights)"
    ]
