Fix Binder logo

--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -253,7 +253,7 @@
     "\n",
     "[GitHub](https://github.com/striatum/Zagreb-2019.git)\n",
     "\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/striatum/Zagreb-2019/master?filepath=Automatic_cue_outcome_handling.ipynb)\n"
+    "<a href=\"https://mybinder.org/v2/gh/striatum/Zagreb-2019/master?filepath=Automatic_cue_outcome_handling.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Binder\"></a>\n"
    ]
   },
   {
