--- a/Python_Tomatoes.ipynb
+++ b/Python_Tomatoes.ipynb
@@ -251,9 +251,7 @@
    "source": [
     "If you have many cues and/or outcomes, Python can handle them and return the unique ones!\n",
     "\n",
-    "[GitHub](https://github.com/striatum/Zagreb-2019.git)\n",
-    "\n",
-    "<a href=\"https://mybinder.org/v2/gh/striatum/Zagreb-2019/master?filepath=Automatic_cue_outcome_handling.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Binder\"></a>\n"
+    "Use the jupyter notebook `Automatic_cue_outcome_handling.ipynb` to see how that can be worked out.\n"
    ]
   },
   {
